fix whitespace in gridList

--- a/sass/core/layout/_gridList.scss
+++ b/sass/core/layout/_gridList.scss
@@ -29,10 +29,11 @@ $glColumns: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10;
 	margin: 0 #{-$space} 0 0;
 	padding: 0;
 	list-style: none;
-	font-size: 0;
+	font-size: 0; // shrink whitespace inside .gridList
 }
 
 .gridList-item {
+	font-size: 1rem; // reset to normal inside each LI element
 	display: inline-block;
 	margin: 0;
 	padding: 0 $space $space 0;
